fixing tips text being unaligned

--- a/pages/tips/tips.css
+++ b/pages/tips/tips.css
@@ -310,6 +310,7 @@ main {
   opacity: 0.7;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
 }
 
